began styling on app window

--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -14,3 +14,7 @@ $colors: (
 //Fonts
 $font-base: 'Raleway', sans-serif;
 $font-heading: 'Ubuntu Mono', monospace;
+
+// Styling
+$rounded: 10px; // Uniform border radius value
+$app-size: 750px;
