--- a/assets/css/sass/layout/_footer.scss
+++ b/assets/css/sass/layout/_footer.scss
@@ -2,6 +2,6 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    min-height: 120px;
+    height: 150px;
     border-top: color(accent) solid 8px;
 }
