--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,8 +62,27 @@ h6 {
           transform: translate(-50%, -50%);
 }
 
-.center, .social {
+.center, #directions, #win-count, .social {
   text-align: center;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  border: 2px solid #fff;
+  height: 675px;
+  width: 50%;
+  margin: auto 0;
 }
 
 header {
@@ -76,11 +95,49 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  min-height: 120px;
+  height: 150px;
   border-top: #bada55 solid 8px;
 }
 
 /* Components */
+#app {
+  border: 5px solid #fff;
+  border-radius: 10px;
+  height: 750px;
+  width: 375px;
+}
+
+#answer {
+  height: 50px;
+  line-height: 50px;
+  font-size: 25px;
+  margin: 0 auto;
+}
+
+#answer-pic {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  margin: 10px 15px;
+  border-radius: 10px;
+}
+
+#directions {
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  height: 50px;
+  border: 1px solid red;
+  width: 100%;
+}
+
+#win-count {
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  height: 50px;
+  border: 1px solid red;
+  width: 100%;
+}
+
 .social {
   margin: 10px auto;
   width: 100%;
