--- a/assets/css/sass/layout/_utility.scss
+++ b/assets/css/sass/layout/_utility.scss
@@ -13,3 +13,17 @@
 .center {
     text-align: center;
 }
+
+.row {
+    display: flex;
+    width: 100%;
+}
+
+.col {
+    display: flex;
+    flex-basis: 1;
+    border: 2px solid color(txt);
+    height: $app-size * 0.9;
+    width: 50%;
+    margin: auto 0;
+}
