refactored css to use bootstrap grid

--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -13,6 +13,7 @@
 /* Layout */
 @import 'layout/utility';
 @import 'layout/header';
+@import 'layout/main';
 @import 'layout/footer';
 
 /* Components */
