--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,8 @@
           box-sizing: border-box;
 }
 
-html {
+html,
+body {
   height: 100%;
 }
 
@@ -49,46 +50,28 @@ h6 {
 }
 
 /* Layout */
-.container {
-  max-width: 80%;
-  margin: 0 auto;
-}
-
 .middle {
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-}
-
-.center, #directions, #win-count, .social {
-  text-align: center;
-}
-
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
 }
 
-.col {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-preferred-size: 1;
-      flex-basis: 1;
-  border: 2px solid #fff;
-  height: 675px;
-  width: 50%;
-  margin: auto 0;
+.center, .social {
+  text-align: center;
 }
 
 header {
   height: 150px;
   line-height: 70px;
   border-bottom: #bada55 solid 8px;
+}
+
+main {
+  margin: 150px auto;
+  top: 0;
 }
 
 footer {
@@ -103,8 +86,9 @@ footer {
 #app {
   border: 5px solid #fff;
   border-radius: 10px;
-  height: 750px;
-  width: 375px;
+  max-height: 1000px;
+  width: 500px;
+  margin: auto;
 }
 
 #answer {
@@ -118,24 +102,18 @@ footer {
   width: 100%;
   height: 100px;
   background-color: red;
-  margin: 10px 15px;
   border-radius: 10px;
+  margin-top: 20px;
 }
 
-#directions {
-  -ms-flex-preferred-size: 1;
-      flex-basis: 1;
-  height: 50px;
-  border: 1px solid red;
-  width: 100%;
+.row-custom {
+  margin-top: 20px;
 }
 
-#win-count {
-  -ms-flex-preferred-size: 1;
-      flex-basis: 1;
-  height: 50px;
-  border: 1px solid red;
-  width: 100%;
+.col-custom {
+  border: 1px solid #fff;
+  min-height: 450px;
+  max-height: 930px;
 }
 
 .social {
