--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -17,4 +17,5 @@ $font-heading: 'Ubuntu Mono', monospace;
 
 // Styling
 $rounded: 10px; // Uniform border radius value
-$app-size: 750px;
+$header-footer-size: 150px;
+$app-size: 1000px;
