--- a/assets/css/sass/components/_app.scss
+++ b/assets/css/sass/components/_app.scss
@@ -1,8 +1,9 @@
 #app {
     border: 5px solid color(txt);
     border-radius: $rounded;
-    height: $app-size;
+    max-height: $app-size;
     width: $app-size * 0.5;
+    margin: auto;
 }
 
 #answer {
@@ -17,25 +18,16 @@
         width: 100%;
         height: 100px;
         background-color: red;
-        margin: 10px 15px;
         border-radius: $rounded;
+        margin-top: 20px;
     }
 }
 
-#directions {
-    @extend .center;
-
-    flex-basis: 1;
-    height: 50px;
-    border: 1px solid red;
-    width: 100%;
+.row-custom {
+    margin-top: 20px;
 }
-
-#win-count {
-    @extend .center;
-
-    flex-basis: 1;
-    height: 50px;
-    border: 1px solid red;
-    width: 100%;
+.col-custom {
+    border: 1px solid color(txt);
+    min-height: 450px;
+    max-height: 930px;
 }
