--- a/assets/css/sass/layout/_header.scss
+++ b/assets/css/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 header {
-    height: 150px;
+    height: $header-footer-size;
     line-height: 70px;
     border-bottom: color(accent) solid 8px;
 }
