--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ footer {
   margin: auto;
 }
 
-#answer {
+#answer-field {
   height: 50px;
   line-height: 50px;
   font-size: 25px;
@@ -96,8 +96,8 @@ footer {
 #answer-pic {
   width: 100%;
   height: 100px;
-  background-color: red;
   border-radius: 10px;
+  border: 1px solid #fff;
   margin-top: 20px;
 }
 
