--- a/assets/css/sass/components/_app.scss
+++ b/assets/css/sass/components/_app.scss
@@ -7,18 +7,20 @@
 }
 
 #answer {
-    $size: 50px;
+    &-field {
+        $size: 50px;
 
-    height: $size;
-    line-height: $size;
-    font-size: $size * 0.5;
-    margin: 0 auto;
+        height: $size;
+        line-height: $size;
+        font-size: $size * 0.5;
+        margin: 0 auto;
+    }
 
     &-pic {
         width: 100%;
         height: 100px;
-        background-color: red;
         border-radius: $rounded;
+        border: 1px solid color(txt);
         margin-top: 20px;
     }
 }
