--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -1,5 +1,5 @@
 /* Vendor */
-@import url('https://fonts.googleapis.com/css?family=Raleway|Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway|Dancing+Script&display=swap');
 
 //Abstract
 @import 'abstracts/variables';
@@ -18,3 +18,4 @@
 /* Components */
 @import 'components/app';
 @import 'components/social';
+@import 'components/button';
