made img smaller

--- a/assets/css/sass/components/_app.scss
+++ b/assets/css/sass/components/_app.scss
@@ -18,6 +18,7 @@
 
     &-pic {
         max-width: 100%;
+        max-height: 75%;
         border-radius: $rounded;
         margin-top: 20px;
     }
